{
    "name": "InputManager",
    "maps": [
        {
            "name": "Player",
            "id": "7253c10d-a515-4167-a784-77de2e30e021",
            "actions": [
                {
                    "name": "LookCCl",
                    "type": "Button",
                    "id": "099f2a2b-72e6-4529-ae3f-b180c77bb602",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LookCl",
                    "type": "Button",
                    "id": "d6d3722e-9a80-47e7-b401-afe212f4b1c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "1a770d25-7de1-4992-8276-023eb0f5b08e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "1e8ed5f3-3cff-4fff-bd97-cbd1ac2958a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Stop",
                    "type": "Button",
                    "id": "af235929-7c5e-4bcb-822e-8a4826dacc78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "81e5bf4a-b3cb-45dc-b8ca-132c607c8528",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e5dd0689-504d-4070-b66c-40748b760515",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b69af97-df58-4f29-9b3b-f1cd47849699",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c492a1d-33b2-4b2d-9311-a7f6cc1093ff",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8aa0be31-9ee0-4c17-a968-eb61ce7a5186",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1072bb70-bbe0-4ed4-aa20-86b416cc62ad",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookCCl",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "953d9383-5f10-4ef3-a3c7-7efb8f25bce8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookCl",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game",
            "id": "864d30b4-0b25-4fdf-be15-b59ee9243a90",
            "actions": [
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "36013f3c-e927-4b74-8a56-a191e0a02c62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "394d8abd-176a-4433-8fee-34334bb24d14",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}